# robohead2

./: README.md
ears_driver/: CMakeLists.txt  package.xml
ears_driver/config/: ears_driver.yaml
ears_driver/launch/: ears_driver_launch.py
ears_driver/src/: main.cpp
gyrobro_controller/: package.xml  setup.cfg  setup.py
gyrobro_controller/actions/std_attention/: action.py
gyrobro_controller/actions/std_ball_tracker/: action.py
gyrobro_controller/actions/std_ears/: action.py
gyrobro_controller/actions/std_greeting/: action.py
gyrobro_controller/actions/std_wait/: action.py
gyrobro_controller/config/: gyrobro_controller.yaml  media_driver.yaml  neck_driver.yaml  respeaker_driver.yaml  speech_recognizer.yaml
gyrobro_controller/gyrobro_controller/: main copy.py  main.py
gyrobro_controller/launch/: dependencies.launch.py  gyrobro_controller.launch.py
media_driver/: CMakeLists copy.txt  CMakeLists.txt  package.xml
media_driver/launch/: media_driver_launch.py
media_driver/src/: imager.py  main copy.cpp  main.cpp  main.py  player  test.cpp
neck_driver/: CMakeLists.txt  package.xml
neck_driver/config/: neck_driver.yaml
neck_driver/launch/: neck_driver_launch.py
neck_driver/src/: a.out  main.cpp  servo_pulse_check.cpp
respeaker_driver/: CMakeLists.txt  package.xml  setup.cfg
respeaker_driver/config/: respeaker_driver.yaml
respeaker_driver/launch/: respeaker_driver.launch.py
respeaker_driver/respeaker_driver/: example_record.py  main.py  test_whisper.py
respeaker_driver/src/: main.cpp  main_py.py
respeaker_driver_bak/: package.xml  setup.py
respeaker_driver_bak/launch/: respeaker_driver_launch.py
respeaker_driver_bak/respeaker_driver/: example_record.py  main.py
robohead_controller/: package.xml  setup.cfg  setup.py
robohead_controller/actions/std_attention/: action.py
robohead_controller/actions/std_ball_tracker/: action.py
robohead_controller/actions/std_ears/: action.py
robohead_controller/actions/std_greeting/: action.py
robohead_controller/actions/std_wait/: action.py
robohead_controller/config/: ears_driver.yaml  robohead_controller.yaml  sensor_driver.yaml  speech_recognizer.yaml
robohead_controller/launch/: dependencies.launch.py  robohead_controller.launch.py
robohead_controller/robohead_controller/: main.py  types.py
robohead_interfaces/: CMakeLists.txt  package.xml
robohead_interfaces/msg/: ColorArray.msg  ColorRGBuint8Array.msg
robohead_interfaces/srv/: Color.srv  ColorPalette.srv  ColorPallete.srv  Move.srv  PlayMedia.srv
robohead_msgs/: CMakeLists.txt  package.xml
robohead_msgs/srv/: PlayFile.srv  SimpleCommand.srv
sensor_driver/: CMakeLists.txt  package.xml
sensor_driver/launch/: sensor_driver_launch.py
sensor_driver/src/: main.cpp
speakers_driver/: CMakeLists.txt  package.xml
speakers_driver/launch/: speakers_driver_launch.py
speakers_driver/src/: main.cpp
speech_recognizer/: package.xml  setup.py
speech_recognizer/config/: speech_recognizer.yaml
speech_recognizer/launch/: speech_recognizer.launch.py
speech_recognizer/speech_recognizer/: main.py  speech_node.py
