<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gyrobro_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kolesnikovpi2005@mail.ru">pi</maintainer>
  <license>TODO: License declaration</license>

  <depend>robohead_interfaces</depend>
  <depend>ears_driver</depend>
  <depend>neck_driver</depend>
  <depend>respeaker_driver</depend>
  <depend>sensor_driver</depend>
  <depend>media_driver</depend>
  <depend>speech_recognizer</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
