<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>media_driver</name>
  <version>1.0.0</version>
  <description>Media player based on MPV</description>
  <maintainer email="kolesnikovpi2005@mail.ru">kolezo-pi</maintainer>
  <license>Apache-2.0</license>


  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>robohead_interfaces</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
